# bo-sql

./: .gitignore  LICENSE  Makefile  README.md  meson.build  smoke.sh
.github/workflows/: ci.yml
catalog/: catalog.cpp  catalog.h  meson.build
cli/: main.cpp  meson.build
docs/: sql-engine-design.md
engine/: meson.build
exec/: meson.build
include/: types.h
include/catalog/: catalog.h
include/exec/: execution_types.hpp  expression.h  formatter.hpp  operator.hpp  physical_planner.h
include/logical/: logical.h  planner.h
include/parser/: ast.h  parser.h
include/storage/: csv_loader.h  dictionary.h  table.h
parser/: ast.h  meson.build  parser.h
planner/: meson.build
src/catalog/: catalog.cpp
src/cli/: main.cpp
src/exec/: execution.cpp  expression.cpp  formatter.cpp  operator.cpp  physical_planner.cpp
src/logical/: logical.cpp  planner.cpp
src/parser/: ast_to_string.cpp  meson.build  parser.cpp
src/storage/: csv_loader.cpp  dictionary.cpp  table.cpp
storage/: csv_loader.h  dictionary.cpp  dictionary.h  meson.build  table.h
subprojects/: catch2.wrap  fmt.wrap
tests/: meson.build  test_catalog.cpp  test_columnar.cpp  test_csv.cpp  test_execution.cpp  test_logical.cpp  test_main.cpp  test_parser.cpp  test_types.cpp
